--- a/notebooks/03_特征提取实践.ipynb
+++ b/notebooks/03_特征提取实践.ipynb
@@ -21,26 +21,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "project_root = Path.cwd().parent\n",
-    "sys.path.insert(0, str(project_root))\n",
-    "\n",
-    "from code.week06_preprocessing.filters import EMGFilters\n",
-    "from code.week07_feature_extraction.features import EMGFeatures\n",
-    "\n",
-    "plt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False\n",
-    "plt.rcParams['figure.dpi'] = 100\n",
-    "\n",
-    "print(\"✓ 导入成功！\")"
-   ]
+   "source": "# ===== 导入必要的Python库 =====\n\nimport sys\nfrom pathlib import Path\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport pandas as pd\nimport seaborn as sns\n\n# ===== 添加项目路径（改进版，更可靠） =====\n# 方法1: 获取notebook所在目录的父目录\nproject_root = Path.cwd().parent\nif not (project_root / 'code').exists():\n    # 如果不存在，尝试当前目录\n    project_root = Path.cwd()\n\nprint(f\"项目根目录: {project_root}\")\nprint(f\"code目录存在: {(project_root / 'code').exists()}\")\n\n# 添加到sys.path（如果还没有添加）\nif str(project_root) not in sys.path:\n    sys.path.insert(0, str(project_root))\n\n# ===== 导入自定义模块 =====\n# 使用try-except提供更友好的错误信息\ntry:\n    from code.week06_preprocessing.filters import EMGFilters\n    from code.week07_feature_extraction.features import EMGFeatures\n    print(\"✓ 模块导入成功！\")\nexcept ImportError as e:\n    print(f\"✗ 导入失败: {e}\")\n    print(\"\\n可能的解决方案：\")\n    print(\"1. 确保在项目根目录或notebooks目录运行\")\n    print(\"2. 重启Jupyter内核：Kernel → Restart Kernel\")\n    print(\"3. 检查__init__.py文件是否存在\")\n    print(f\"4. 当前sys.path[0]: {sys.path[0]}\")\n    raise\n\n# ===== 配置matplotlib中文显示 =====\nplt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']\nplt.rcParams['axes.unicode_minus'] = False\nplt.rcParams['figure.dpi'] = 100\n\nprint(\"✓ 环境配置完成！\")"
   },
   {
    "cell_type": "markdown",
@@ -53,7 +34,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'EMGFilters' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m signal[contraction_start:contraction_end] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mnormal(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0.15\u001b[39m, contraction_end \u001b[38;5;241m-\u001b[39m contraction_start)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# 预处理\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m filters \u001b[38;5;241m=\u001b[39m \u001b[43mEMGFilters\u001b[49m(fs\u001b[38;5;241m=\u001b[39mfs)\n\u001b[0;32m     18\u001b[0m signal_filtered \u001b[38;5;241m=\u001b[39m filters\u001b[38;5;241m.\u001b[39mpreprocess_emg(signal, remove_powerline\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m14\u001b[39m, \u001b[38;5;241m4\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'EMGFilters' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fs = 1000\n",
     "duration = 5\n",
@@ -215,9 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'EMGFeatures' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m window_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200\u001b[39m  \u001b[38;5;66;03m# 200ms窗口\u001b[39;00m\n\u001b[0;32m      3\u001b[0m step \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m  \u001b[38;5;66;03m# 100ms步长\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m features, feature_names, time_points \u001b[38;5;241m=\u001b[39m \u001b[43mEMGFeatures\u001b[49m\u001b[38;5;241m.\u001b[39msliding_window_features(\n\u001b[0;32m      6\u001b[0m     signal_filtered,\n\u001b[0;32m      7\u001b[0m     window_size\u001b[38;5;241m=\u001b[39mwindow_size,\n\u001b[0;32m      8\u001b[0m     step\u001b[38;5;241m=\u001b[39mstep,\n\u001b[0;32m      9\u001b[0m     fs\u001b[38;5;241m=\u001b[39mfs,\n\u001b[0;32m     10\u001b[0m     include_time\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m     include_freq\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     12\u001b[0m )\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m✓ 滑动窗口特征提取完成\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  特征矩阵形状: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfeatures\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'EMGFeatures' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 滑动窗口特征提取\n",
     "window_size = 200  # 200ms窗口\n",
@@ -542,7 +547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "FGANet",
    "language": "python",
    "name": "python3"
   },
@@ -556,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
