fix: 添加三重后备导入方案，彻底解决模块导入问题
问题分析:
- 'code' is not a package 错误通常由Python缓存或路径冲突引起
- 单一导入方法在某些环境下可能失败

解决方案（三重后备）:
1. 方法1: 标准的from...import导入
2. 方法2: 使用importlib.import_module动态导入
3. 方法3: 直接添加模块目录到sys.path，绕过包机制

改进内容:
- 清理sys.path中的旧路径，避免冲突
- 三种导入方法自动切换
- 详细的调试输出，方便排查问题
- 无论哪种方法成功，都能正常使用

涉及文件:
- 03_特征提取实践.ipynb
- 04_完整流程演示.ipynb
- 05_分类器详解与对比.ipynb

现在应该能在任何环境下正常导入了！

--- a/notebooks/03_特征提取实践.ipynb
+++ b/notebooks/03_特征提取实践.ipynb
@@ -18,10 +18,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": "# ===== 导入必要的Python库 =====\n\nimport sys\nfrom pathlib import Path\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport pandas as pd\nimport seaborn as sns\n\n# ===== 添加项目路径（改进版，更可靠） =====\n# 方法1: 获取notebook所在目录的父目录\nproject_root = Path.cwd().parent\nif not (project_root / 'code').exists():\n    # 如果不存在，尝试当前目录\n    project_root = Path.cwd()\n\nprint(f\"项目根目录: {project_root}\")\nprint(f\"code目录存在: {(project_root / 'code').exists()}\")\n\n# 添加到sys.path（如果还没有添加）\nif str(project_root) not in sys.path:\n    sys.path.insert(0, str(project_root))\n\n# ===== 导入自定义模块 =====\n# 使用try-except提供更友好的错误信息\ntry:\n    from code.week06_preprocessing.filters import EMGFilters\n    from code.week07_feature_extraction.features import EMGFeatures\n    print(\"✓ 模块导入成功！\")\nexcept ImportError as e:\n    print(f\"✗ 导入失败: {e}\")\n    print(\"\\n可能的解决方案：\")\n    print(\"1. 确保在项目根目录或notebooks目录运行\")\n    print(\"2. 重启Jupyter内核：Kernel → Restart Kernel\")\n    print(\"3. 检查__init__.py文件是否存在\")\n    print(f\"4. 当前sys.path[0]: {sys.path[0]}\")\n    raise\n\n# ===== 配置matplotlib中文显示 =====\nplt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']\nplt.rcParams['axes.unicode_minus'] = False\nplt.rcParams['figure.dpi'] = 100\n\nprint(\"✓ 环境配置完成！\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "项目根目录: c:\\Users\\Administrator\\EMG_Learning_Project\n",
+      "code目录存在: True\n",
+      "sys.path[0]: c:\\Users\\Administrator\\EMG_Learning_Project\n",
+      "方法1失败: No module named 'code.week06_preprocessing'; 'code' is not a package\n",
+      "\n",
+      "尝试方法2: 使用importlib...\n",
+      "\n",
+      "方法2也失败: No module named 'code.week06_preprocessing'; 'code' is not a package\n",
+      "\n",
+      "最后尝试：直接添加模块路径...\n",
+      "✓ 模块导入成功（方法3）！\n",
+      "\n",
+      "✓ 环境配置完成！\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== 导入必要的Python库 =====\n",
+    "\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# ===== 添加项目路径（改进版，解决导入问题） =====\n",
+    "# 获取项目根目录\n",
+    "project_root = Path.cwd().parent\n",
+    "if not (project_root / 'code').exists():\n",
+    "    project_root = Path.cwd()\n",
+    "\n",
+    "print(f\"项目根目录: {project_root}\")\n",
+    "print(f\"code目录存在: {(project_root / 'code').exists()}\")\n",
+    "\n",
+    "# 清理sys.path中的旧路径，避免冲突\n",
+    "sys.path = [p for p in sys.path if 'EMG_Learning_Project' not in p]\n",
+    "\n",
+    "# 添加项目根目录到sys.path的最前面\n",
+    "sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "print(f\"sys.path[0]: {sys.path[0]}\")\n",
+    "\n",
+    "# ===== 导入自定义模块（使用importlib确保重新加载） =====\n",
+    "import importlib\n",
+    "\n",
+    "try:\n",
+    "    # 方法1: 尝试直接导入\n",
+    "    from code.week06_preprocessing.filters import EMGFilters\n",
+    "    from code.week07_feature_extraction.features import EMGFeatures\n",
+    "    print(\"✓ 模块导入成功（方法1）！\")\n",
+    "    \n",
+    "except ImportError as e1:\n",
+    "    print(f\"方法1失败: {e1}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # 方法2: 使用importlib动态导入\n",
+    "        print(\"\\n尝试方法2: 使用importlib...\")\n",
+    "        \n",
+    "        # 导入filters模块\n",
+    "        filters_module = importlib.import_module('code.week06_preprocessing.filters')\n",
+    "        EMGFilters = filters_module.EMGFilters\n",
+    "        \n",
+    "        # 导入features模块\n",
+    "        features_module = importlib.import_module('code.week07_feature_extraction.features')\n",
+    "        EMGFeatures = features_module.EMGFeatures\n",
+    "        \n",
+    "        print(\"✓ 模块导入成功（方法2）！\")\n",
+    "        \n",
+    "    except Exception as e2:\n",
+    "        print(f\"\\n方法2也失败: {e2}\")\n",
+    "        print(\"\\n最后尝试：直接添加模块路径...\")\n",
+    "        \n",
+    "        # 方法3: 直接添加模块目录到sys.path\n",
+    "        sys.path.insert(0, str(project_root / 'code' / 'week06_preprocessing'))\n",
+    "        sys.path.insert(0, str(project_root / 'code' / 'week07_feature_extraction'))\n",
+    "        \n",
+    "        try:\n",
+    "            from filters import EMGFilters\n",
+    "            from features import EMGFeatures\n",
+    "            print(\"✓ 模块导入成功（方法3）！\")\n",
+    "        except Exception as e3:\n",
+    "            print(f\"✗ 所有方法都失败: {e3}\")\n",
+    "            print(\"\\n请联系助教或老师获取帮助\")\n",
+    "            raise\n",
+    "\n",
+    "# ===== 配置matplotlib中文显示 =====\n",
+    "plt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']\n",
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "\n",
+    "print(\"\\n✓ 环境配置完成！\")"
+   ]
   },
   {
    "cell_type": "markdown",
