--- a/notebooks/01_信号可视化入门.ipynb
+++ b/notebooks/01_信号可视化入门.ipynb
@@ -21,7 +21,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 导入必要的Python库 =====\n\n# 系统库\nimport sys  # 用于操作Python环境\nfrom pathlib import Path  # 用于处理文件路径\n\n# 科学计算和数据处理库\nimport numpy as np  # 数值计算：数组、矩阵、数学函数\nimport matplotlib.pyplot as plt  # 绘图库：创建各种图表\nfrom scipy import signal  # 信号处理库：频谱分析、滤波等\n\n# ===== 添加项目路径 =====\nproject_root = Path.cwd().parent  # 获取项目根目录\nsys.path.insert(0, str(project_root))  # 添加到Python搜索路径\n\n# ===== 配置matplotlib中文显示 =====\nplt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']  # 设置中文字体\nplt.rcParams['axes.unicode_minus'] = False  # 解决负号显示问题\nplt.rcParams['figure.dpi'] = 100  # 设置图表清晰度（DPI：每英寸点数）\n\nprint(\"✓ 库导入成功！\")"
+   "source": [
+    "# ===== 导入必要的Python库 =====\n",
+    "\n",
+    "# 系统库\n",
+    "import sys  # 用于操作Python环境\n",
+    "from pathlib import Path  # 用于处理文件路径\n",
+    "\n",
+    "# 科学计算和数据处理库\n",
+    "import numpy as np  # 数值计算：数组、矩阵、数学函数\n",
+    "import matplotlib.pyplot as plt  # 绘图库：创建各种图表\n",
+    "from scipy import signal  # 信号处理库：频谱分析、滤波等\n",
+    "\n",
+    "# ===== 添加项目路径 =====\n",
+    "project_root = Path.cwd().parent  # 获取项目根目录\n",
+    "sys.path.insert(0, str(project_root))  # 添加到Python搜索路径\n",
+    "\n",
+    "# --- Jupyter/IPython 兼容性修复 ---\n",
+    "# IPython 往往会先导入标准库的 `code` 模块，导致 `code.weekXX_*` 不是包。\n",
+    "# 这里把项目的 `code/` 目录挂到 `code.__path__`，让子模块可被正常导入。\n",
+    "import code as _code\n",
+    "if not hasattr(_code, '__path__'):\n",
+    "    _code.__path__ = [str(project_root / 'code')]\n",
+    "\n",
+    "# ===== 配置matplotlib中文显示 =====\n",
+    "plt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei', 'Segoe UI Symbol', 'Arial Unicode MS', 'DejaVu Sans']  # 设置中文字体\n",
+    "plt.rcParams['axes.unicode_minus'] = False  # 解决负号显示问题\n",
+    "plt.rcParams['figure.dpi'] = 100  # 设置图表清晰度（DPI：每英寸点数）\n",
+    "\n",
+    "print(\"✓ 库导入成功！\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,7 +66,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 生成模拟EMG信号 =====\n\n# --- 第一步：设置信号参数 ---\nfs = 1000  # 采样率：每秒1000个采样点（1000 Hz）\nduration = 5  # 信号时长：5秒\nt = np.linspace(0, duration, int(duration * fs))\n# linspace生成均匀分布的时间点：从0到5秒，共5000个点\n\n# --- 第二步：生成基础噪声（静息状态） ---\nsignal_emg = np.random.normal(0, 0.02, len(t))\n# normal(均值, 标准差, 数量)\n# 生成高斯噪声，模拟肌肉完全放松时的微弱电活动\n\n# --- 第三步：定义肌肉收缩期（1-4秒） ---\ncontraction_start = int(1 * fs)  # 1秒 = 第1000个采样点\ncontraction_end = int(4 * fs)    # 4秒 = 第4000个采样点\n\n# --- 第四步：在收缩期添加多个频率成分 ---\n# EMG信号是多个运动单元放电的叠加\nfor freq in range(60, 150, 15):  # 频率：60, 75, 90, 105, 120, 135 Hz\n    amplitude = np.random.uniform(0.2, 0.4)  # 随机振幅：0.2-0.4 mV\n    # 每个运动单元的振幅略有不同\n    \n    signal_emg[contraction_start:contraction_end] += amplitude * np.sin(\n        2 * np.pi * freq * t[contraction_start:contraction_end]\n    )\n    # 正弦波公式：A * sin(2πft)\n    # A: 振幅，f: 频率，t: 时间\n\n# --- 第五步：添加随机噪声（模拟信号干扰） ---\nsignal_emg[contraction_start:contraction_end] += np.random.normal(\n    0, 0.15, contraction_end - contraction_start\n)\n# 收缩期的噪声更大（标准差0.15），模拟肌肉收缩时的复杂性\n\n# --- 第六步：打印信号信息 ---\nprint(f\"✓ 信号生成完成\")\nprint(f\"  采样点数: {len(signal_emg)}\")\nprint(f\"  采样率: {fs} Hz\")\nprint(f\"  时长: {duration} 秒\")\nprint(f\"  收缩期: {contraction_start/fs:.1f}-{contraction_end/fs:.1f} 秒\")"
+   "source": [
+    "# ===== 生成模拟EMG信号 =====\n",
+    "\n",
+    "# --- 第一步：设置信号参数 ---\n",
+    "fs = 1000  # 采样率：每秒1000个采样点（1000 Hz）\n",
+    "duration = 5  # 信号时长：5秒\n",
+    "t = np.linspace(0, duration, int(duration * fs))\n",
+    "# linspace生成均匀分布的时间点：从0到5秒，共5000个点\n",
+    "\n",
+    "# --- 第二步：生成基础噪声（静息状态） ---\n",
+    "signal_emg = np.random.normal(0, 0.02, len(t))\n",
+    "# normal(均值, 标准差, 数量)\n",
+    "# 生成高斯噪声，模拟肌肉完全放松时的微弱电活动\n",
+    "\n",
+    "# --- 第三步：定义肌肉收缩期（1-4秒） ---\n",
+    "contraction_start = int(1 * fs)  # 1秒 = 第1000个采样点\n",
+    "contraction_end = int(4 * fs)    # 4秒 = 第4000个采样点\n",
+    "\n",
+    "# --- 第四步：在收缩期添加多个频率成分 ---\n",
+    "# EMG信号是多个运动单元放电的叠加\n",
+    "for freq in range(60, 150, 15):  # 频率：60, 75, 90, 105, 120, 135 Hz\n",
+    "    amplitude = np.random.uniform(0.2, 0.4)  # 随机振幅：0.2-0.4 mV\n",
+    "    # 每个运动单元的振幅略有不同\n",
+    "    \n",
+    "    signal_emg[contraction_start:contraction_end] += amplitude * np.sin(\n",
+    "        2 * np.pi * freq * t[contraction_start:contraction_end]\n",
+    "    )\n",
+    "    # 正弦波公式：A * sin(2πft)\n",
+    "    # A: 振幅，f: 频率，t: 时间\n",
+    "\n",
+    "# --- 第五步：添加随机噪声（模拟信号干扰） ---\n",
+    "signal_emg[contraction_start:contraction_end] += np.random.normal(\n",
+    "    0, 0.15, contraction_end - contraction_start\n",
+    ")\n",
+    "# 收缩期的噪声更大（标准差0.15），模拟肌肉收缩时的复杂性\n",
+    "\n",
+    "# --- 第六步：打印信号信息 ---\n",
+    "print(f\"✓ 信号生成完成\")\n",
+    "print(f\"  采样点数: {len(signal_emg)}\")\n",
+    "print(f\"  采样率: {fs} Hz\")\n",
+    "print(f\"  时长: {duration} 秒\")\n",
+    "print(f\"  收缩期: {contraction_start/fs:.1f}-{contraction_end/fs:.1f} 秒\")"
+   ]
   },
   {
    "cell_type": "markdown",
