--- a/notebooks/02_滤波器设计实验.ipynb
+++ b/notebooks/02_滤波器设计实验.ipynb
@@ -21,7 +21,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 导入必要的Python库 =====\n\n# 系统库\nimport sys  # 用于操作Python环境\nfrom pathlib import Path  # 用于处理文件路径\n\n# 科学计算库\nimport numpy as np  # 数值计算：数组、矩阵运算\nimport matplotlib.pyplot as plt  # 绘图库：创建图表\nfrom scipy import signal as sp_signal  # 信号处理库：频谱分析、滤波\n# 注意：这里重命名为sp_signal，避免与变量名signal冲突\n\n# ===== 添加项目路径 =====\nproject_root = Path.cwd().parent  # 获取项目根目录\nsys.path.insert(0, str(project_root))  # 添加到Python搜索路径\n\n# ===== 导入自定义滤波器模块 =====\nfrom code.week06_preprocessing.filters import EMGFilters\n# 我们自己编写的EMG专用滤波器\n\n# ===== 配置matplotlib =====\nplt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei']  # 中文字体\nplt.rcParams['axes.unicode_minus'] = False  # 解决负号显示问题\nplt.rcParams['figure.dpi'] = 100  # 图表清晰度\n\nprint(\"✓ 导入成功！\")"
+   "source": [
+    "# ===== 导入必要的Python库 =====\n",
+    "\n",
+    "# 系统库\n",
+    "import sys  # 用于操作Python环境\n",
+    "from pathlib import Path  # 用于处理文件路径\n",
+    "\n",
+    "# 科学计算库\n",
+    "import numpy as np  # 数值计算：数组、矩阵运算\n",
+    "import matplotlib.pyplot as plt  # 绘图库：创建图表\n",
+    "from scipy import signal as sp_signal  # 信号处理库：频谱分析、滤波\n",
+    "# 注意：这里重命名为sp_signal，避免与变量名signal冲突\n",
+    "\n",
+    "# ===== 添加项目路径 =====\n",
+    "project_root = Path.cwd().parent  # 获取项目根目录\n",
+    "sys.path.insert(0, str(project_root))  # 添加到Python搜索路径\n",
+    "\n",
+    "# --- Jupyter/IPython 兼容性修复 ---\n",
+    "# IPython 往往会先导入标准库的 `code` 模块，导致 `code.weekXX_*` 不是包。\n",
+    "# 这里把项目的 `code/` 目录挂到 `code.__path__`，让子模块可被正常导入。\n",
+    "import code as _code\n",
+    "if not hasattr(_code, '__path__'):\n",
+    "    _code.__path__ = [str(project_root / 'code')]\n",
+    "\n",
+    "# ===== 导入自定义滤波器模块 =====\n",
+    "from code.week06_preprocessing.filters import EMGFilters\n",
+    "# 我们自己编写的EMG专用滤波器\n",
+    "\n",
+    "# ===== 配置matplotlib =====\n",
+    "plt.rcParams['font.sans-serif'] = ['SimHei', 'Microsoft YaHei', 'Segoe UI Symbol', 'Arial Unicode MS', 'DejaVu Sans']  # 中文字体\n",
+    "plt.rcParams['axes.unicode_minus'] = False  # 解决负号显示问题\n",
+    "plt.rcParams['figure.dpi'] = 100  # 图表清晰度\n",
+    "\n",
+    "print(\"✓ 导入成功！\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +75,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 生成包含多种噪声的EMG信号 =====\n\n# --- 第一步：设置基本参数 ---\nfs = 1000  # 采样率：1000 Hz\nduration = 5  # 时长：5秒\nt = np.linspace(0, duration, int(duration * fs))  # 时间轴\n\n# --- 第二步：生成纯净的EMG信号（60-150 Hz） ---\nemg_clean = np.zeros(len(t))  # 初始化为全零数组\ncontraction_start = int(1 * fs)  # 收缩开始：1秒\ncontraction_end = int(4 * fs)    # 收缩结束：4秒\n\n# 在收缩期添加多个频率成分（模拟肌肉激活）\nfor freq in range(70, 140, 15):  # 频率：70, 85, 100, 115, 130 Hz\n    emg_clean[contraction_start:contraction_end] += 0.3 * np.sin(\n        2 * np.pi * freq * t[contraction_start:contraction_end]\n    )\n# 这是我们想要保留的\"纯净\"EMG信号\n\n# --- 第三步：添加50Hz工频干扰 ---\npowerline_noise = 0.5 * np.sin(2 * np.pi * 50 * t)\n# 工频干扰来自电网（中国/欧洲是50Hz，美国是60Hz）\n# 振幅0.5 mV，是最常见的EMG噪声源\n# 特点：固定频率，持续存在\n\n# --- 第四步：添加低频基线漂移 ---\nbaseline_drift = 0.3 * np.sin(2 * np.pi * 0.5 * t)\n# 基线漂移是缓慢的低频变化（0.5 Hz）\n# 原因：电极接触不良、皮肤电阻变化、运动伪影\n# 特点：频率很低，但幅度可能很大\n\n# --- 第五步：添加高频噪声 ---\nhigh_freq_noise = 0.1 * np.random.randn(len(t))\n# 高频随机噪声（白噪声）\n# 原因：电子设备噪声、环境电磁干扰\n# 特点：随机、宽频、幅度较小\n\n# --- 第六步：合成带噪声的信号 ---\nemg_noisy = emg_clean + powerline_noise + baseline_drift + high_freq_noise\n# 真实采集的EMG信号 = 纯净信号 + 各种噪声\n\n# --- 第七步：打印各成分的统计信息 ---\nprint(\"✓ 信号生成完成\")\nprint(\"\\n各成分的统计特性（标准差）：\")\nprint(f\"  纯净EMG: {np.std(emg_clean):.4f} mV\")\nprint(f\"  工频噪声: {np.std(powerline_noise):.4f} mV\")\nprint(f\"  基线漂移: {np.std(baseline_drift):.4f} mV\")\nprint(f\"  高频噪声: {np.std(high_freq_noise):.4f} mV\")\nprint(f\"  合成信号: {np.std(emg_noisy):.4f} mV\")\nprint(\"\\n💡 标准差越大，信号/噪声的能量越大\")"
+   "source": [
+    "# ===== 生成包含多种噪声的EMG信号 =====\n",
+    "\n",
+    "# --- 第一步：设置基本参数 ---\n",
+    "fs = 1000  # 采样率：1000 Hz\n",
+    "duration = 5  # 时长：5秒\n",
+    "t = np.linspace(0, duration, int(duration * fs))  # 时间轴\n",
+    "\n",
+    "# --- 第二步：生成纯净的EMG信号（60-150 Hz） ---\n",
+    "emg_clean = np.zeros(len(t))  # 初始化为全零数组\n",
+    "contraction_start = int(1 * fs)  # 收缩开始：1秒\n",
+    "contraction_end = int(4 * fs)    # 收缩结束：4秒\n",
+    "\n",
+    "# 在收缩期添加多个频率成分（模拟肌肉激活）\n",
+    "for freq in range(70, 140, 15):  # 频率：70, 85, 100, 115, 130 Hz\n",
+    "    emg_clean[contraction_start:contraction_end] += 0.3 * np.sin(\n",
+    "        2 * np.pi * freq * t[contraction_start:contraction_end]\n",
+    "    )\n",
+    "# 这是我们想要保留的\"纯净\"EMG信号\n",
+    "\n",
+    "# --- 第三步：添加50Hz工频干扰 ---\n",
+    "powerline_noise = 0.5 * np.sin(2 * np.pi * 50 * t)\n",
+    "# 工频干扰来自电网（中国/欧洲是50Hz，美国是60Hz）\n",
+    "# 振幅0.5 mV，是最常见的EMG噪声源\n",
+    "# 特点：固定频率，持续存在\n",
+    "\n",
+    "# --- 第四步：添加低频基线漂移 ---\n",
+    "baseline_drift = 0.3 * np.sin(2 * np.pi * 0.5 * t)\n",
+    "# 基线漂移是缓慢的低频变化（0.5 Hz）\n",
+    "# 原因：电极接触不良、皮肤电阻变化、运动伪影\n",
+    "# 特点：频率很低，但幅度可能很大\n",
+    "\n",
+    "# --- 第五步：添加高频噪声 ---\n",
+    "high_freq_noise = 0.1 * np.random.randn(len(t))\n",
+    "# 高频随机噪声（白噪声）\n",
+    "# 原因：电子设备噪声、环境电磁干扰\n",
+    "# 特点：随机、宽频、幅度较小\n",
+    "\n",
+    "# --- 第六步：合成带噪声的信号 ---\n",
+    "emg_noisy = emg_clean + powerline_noise + baseline_drift + high_freq_noise\n",
+    "# 真实采集的EMG信号 = 纯净信号 + 各种噪声\n",
+    "\n",
+    "# --- 第七步：打印各成分的统计信息 ---\n",
+    "print(\"✓ 信号生成完成\")\n",
+    "print(\"\\n各成分的统计特性（标准差）：\")\n",
+    "print(f\"  纯净EMG: {np.std(emg_clean):.4f} mV\")\n",
+    "print(f\"  工频噪声: {np.std(powerline_noise):.4f} mV\")\n",
+    "print(f\"  基线漂移: {np.std(baseline_drift):.4f} mV\")\n",
+    "print(f\"  高频噪声: {np.std(high_freq_noise):.4f} mV\")\n",
+    "print(f\"  合成信号: {np.std(emg_noisy):.4f} mV\")\n",
+    "print(\"\\n💡 标准差越大，信号/噪声的能量越大\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,7 +192,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 应用带通滤波器（20-500 Hz） =====\n\n# --- 第一步：创建滤波器对象 ---\nfilters = EMGFilters(fs=fs)  # 传入采样率，初始化滤波器\n\n# --- 第二步：应用带通滤波器 ---\nemg_bandpass = filters.bandpass_filter(\n    emg_noisy,      # 输入：带噪声的信号\n    lowcut=20,      # 低截止频率：20 Hz\n    highcut=500     # 高截止频率：500 Hz\n)\n# 带通滤波器的作用：\n# - 去除 < 20 Hz 的低频成分（基线漂移）\n# - 去除 > 500 Hz 的高频成分（高频噪声）\n# - 保留 20-500 Hz 的信号（EMG有效频率范围）\n\n# --- 第三步：创建对比可视化（上下两图） ---\nfig, axes = plt.subplots(2, 1, figsize=(14, 8))\n\n# 【上图】滤波前\naxes[0].plot(t, emg_noisy, linewidth=0.5, color='blue', alpha=0.7, label='原始信号')\naxes[0].set_ylabel('幅度 (mV)', fontsize=11)\naxes[0].set_title('滤波前：包含所有噪声', fontsize=12, fontweight='bold')\naxes[0].legend()\naxes[0].grid(True, alpha=0.3)\n# alpha=0.7: 透明度70%，让信号不那么刺眼\n\n# 【下图】滤波后\naxes[1].plot(t, emg_bandpass, linewidth=0.5, color='green', label='带通滤波后')\naxes[1].set_xlabel('时间 (秒)', fontsize=11)\naxes[1].set_ylabel('幅度 (mV)', fontsize=11)\naxes[1].set_title('滤波后：保留20-500 Hz，去除了基线漂移', fontsize=12, fontweight='bold')\naxes[1].legend()\naxes[1].grid(True, alpha=0.3)\n\nplt.tight_layout()\nplt.show()\n\n# --- 第四步：定量评估滤波效果 ---\nprint(\"✓ 带通滤波完成\")\nprint(f\"\\n滤波效果对比：\")\nprint(f\"  滤波前标准差: {np.std(emg_noisy):.4f} mV\")\nprint(f\"  滤波后标准差: {np.std(emg_bandpass):.4f} mV\")\nprint(f\"  标准差降低: {(1 - np.std(emg_bandpass)/np.std(emg_noisy))*100:.1f}%\")\n\nprint(\"\\n💡 观察要点：\")\nprint(\"  - 基线漂移（缓慢的上下波动）已经消失\")\nprint(\"  - 信号变得更平稳，围绕零点波动\")\nprint(\"  - 但50Hz工频干扰仍然存在（需要陷波滤波器）\")"
+   "source": [
+    "# ===== 应用带通滤波器（20-500 Hz） =====\n",
+    "\n",
+    "# --- 第一步：创建滤波器对象 ---\n",
+    "filters = EMGFilters(fs=fs)  # 传入采样率，初始化滤波器\n",
+    "\n",
+    "# --- 第二步：应用带通滤波器 ---\n",
+    "emg_bandpass = filters.bandpass_filter(\n",
+    "    emg_noisy,      # 输入：带噪声的信号\n",
+    "    lowcut=20,      # 低截止频率：20 Hz\n",
+    "    highcut=500     # 高截止频率：500 Hz\n",
+    ")\n",
+    "# 带通滤波器的作用：\n",
+    "# - 去除 < 20 Hz 的低频成分（基线漂移）\n",
+    "# - 去除 > 500 Hz 的高频成分（高频噪声）\n",
+    "# - 保留 20-500 Hz 的信号（EMG有效频率范围）\n",
+    "\n",
+    "# --- 第三步：创建对比可视化（上下两图） ---\n",
+    "fig, axes = plt.subplots(2, 1, figsize=(14, 8))\n",
+    "\n",
+    "# 【上图】滤波前\n",
+    "axes[0].plot(t, emg_noisy, linewidth=0.5, color='blue', alpha=0.7, label='原始信号')\n",
+    "axes[0].set_ylabel('幅度 (mV)', fontsize=11)\n",
+    "axes[0].set_title('滤波前：包含所有噪声', fontsize=12, fontweight='bold')\n",
+    "axes[0].legend()\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "# alpha=0.7: 透明度70%，让信号不那么刺眼\n",
+    "\n",
+    "# 【下图】滤波后\n",
+    "axes[1].plot(t, emg_bandpass, linewidth=0.5, color='green', label='带通滤波后')\n",
+    "axes[1].set_xlabel('时间 (秒)', fontsize=11)\n",
+    "axes[1].set_ylabel('幅度 (mV)', fontsize=11)\n",
+    "axes[1].set_title('滤波后：保留20-500 Hz，去除了基线漂移', fontsize=12, fontweight='bold')\n",
+    "axes[1].legend()\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# --- 第四步：定量评估滤波效果 ---\n",
+    "print(\"✓ 带通滤波完成\")\n",
+    "print(f\"\\n滤波效果对比：\")\n",
+    "print(f\"  滤波前标准差: {np.std(emg_noisy):.4f} mV\")\n",
+    "print(f\"  滤波后标准差: {np.std(emg_bandpass):.4f} mV\")\n",
+    "print(f\"  标准差降低: {(1 - np.std(emg_bandpass)/np.std(emg_noisy))*100:.1f}%\")\n",
+    "\n",
+    "print(\"\\n💡 观察要点：\")\n",
+    "print(\"  - 基线漂移（缓慢的上下波动）已经消失\")\n",
+    "print(\"  - 信号变得更平稳，围绕零点波动\")\n",
+    "print(\"  - 但50Hz工频干扰仍然存在（需要陷波滤波器）\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,7 +258,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# ===== 应用陷波滤波器去除50Hz工频干扰 =====\n\n# --- 第一步：在带通滤波的基础上应用陷波滤波 ---\nemg_notch = filters.notch_filter(\n    emg_bandpass,   # 输入：带通滤波后的信号\n    freq=50         # 要去除的频率：50 Hz\n)\n# 陷波滤波器（Notch Filter）：\n# - 专门去除某个特定频率的干扰\n# - 对其他频率影响很小\n# - 类似在频谱上\"挖一个坑\"，所以叫\"陷波\"\n\n# --- 第二步：创建三层对比图 ---\nfig, axes = plt.subplots(3, 1, figsize=(14, 10))\n\n# 【第一层】原始信号\naxes[0].plot(t, emg_noisy, linewidth=0.5, color='blue', alpha=0.7)\naxes[0].set_ylabel('幅度 (mV)')\naxes[0].set_title('原始信号：包含50Hz干扰', fontsize=12, fontweight='bold')\naxes[0].grid(True, alpha=0.3)\n\n# 【第二层】带通滤波后\naxes[1].plot(t, emg_bandpass, linewidth=0.5, color='orange')\naxes[1].set_ylabel('幅度 (mV)')\naxes[1].set_title('带通滤波后：仍有50Hz干扰（看起来有规律的波纹）', fontsize=12, fontweight='bold')\naxes[1].grid(True, alpha=0.3)\n\n# 【第三层】陷波滤波后\naxes[2].plot(t, emg_notch, linewidth=0.5, color='green')\naxes[2].set_xlabel('时间 (秒)')\naxes[2].set_ylabel('幅度 (mV)')\naxes[2].set_title('陷波滤波后：50Hz干扰已去除', fontsize=12, fontweight='bold')\naxes[2].grid(True, alpha=0.3)\n\nplt.tight_layout()\nplt.show()\n\nprint(\"✓ 陷波滤波完成\")\n\nprint(\"\\n💡 如何判断50Hz干扰存在？\")\nprint(\"  - 时域：看到规律性的快速振荡（每秒50次）\")\nprint(\"  - 频域：在50Hz处有明显的峰值（下个单元格会展示）\")\n\nprint(\"\\n💡 为什么需要两次滤波？\")\nprint(\"  - 带通滤波：去除大范围的低频和高频噪声\")\nprint(\"  - 陷波滤波：精确去除特定频率（50Hz）的干扰\")\nprint(\"  - 两者结合，效果最佳\")"
+   "source": [
+    "# ===== 应用陷波滤波器去除50Hz工频干扰 =====\n",
+    "\n",
+    "# --- 第一步：在带通滤波的基础上应用陷波滤波 ---\n",
+    "emg_notch = filters.notch_filter(\n",
+    "    emg_bandpass,   # 输入：带通滤波后的信号\n",
+    "    freq=50         # 要去除的频率：50 Hz\n",
+    ")\n",
+    "# 陷波滤波器（Notch Filter）：\n",
+    "# - 专门去除某个特定频率的干扰\n",
+    "# - 对其他频率影响很小\n",
+    "# - 类似在频谱上\"挖一个坑\"，所以叫\"陷波\"\n",
+    "\n",
+    "# --- 第二步：创建三层对比图 ---\n",
+    "fig, axes = plt.subplots(3, 1, figsize=(14, 10))\n",
+    "\n",
+    "# 【第一层】原始信号\n",
+    "axes[0].plot(t, emg_noisy, linewidth=0.5, color='blue', alpha=0.7)\n",
+    "axes[0].set_ylabel('幅度 (mV)')\n",
+    "axes[0].set_title('原始信号：包含50Hz干扰', fontsize=12, fontweight='bold')\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 【第二层】带通滤波后\n",
+    "axes[1].plot(t, emg_bandpass, linewidth=0.5, color='orange')\n",
+    "axes[1].set_ylabel('幅度 (mV)')\n",
+    "axes[1].set_title('带通滤波后：仍有50Hz干扰（看起来有规律的波纹）', fontsize=12, fontweight='bold')\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 【第三层】陷波滤波后\n",
+    "axes[2].plot(t, emg_notch, linewidth=0.5, color='green')\n",
+    "axes[2].set_xlabel('时间 (秒)')\n",
+    "axes[2].set_ylabel('幅度 (mV)')\n",
+    "axes[2].set_title('陷波滤波后：50Hz干扰已去除', fontsize=12, fontweight='bold')\n",
+    "axes[2].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"✓ 陷波滤波完成\")\n",
+    "\n",
+    "print(\"\\n💡 如何判断50Hz干扰存在？\")\n",
+    "print(\"  - 时域：看到规律性的快速振荡（每秒50次）\")\n",
+    "print(\"  - 频域：在50Hz处有明显的峰值（下个单元格会展示）\")\n",
+    "\n",
+    "print(\"\\n💡 为什么需要两次滤波？\")\n",
+    "print(\"  - 带通滤波：去除大范围的低频和高频噪声\")\n",
+    "print(\"  - 陷波滤波：精确去除特定频率（50Hz）的干扰\")\n",
+    "print(\"  - 两者结合，效果最佳\")"
+   ]
   },
   {
    "cell_type": "markdown",
